# jaalee-ble

./: .all-contributorsrc  .copier-answers.yml  .editorconfig  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md  installation.md  jaalee_ble.rst  modules.rst  usage.md
src/jaalee_ble/: __init__.py  parser.py
tests/: test_ble_advertisements.json  test_parser.py
